Fix horizontal align for tweet text counter

--- a/src/main/webapp/layout/layout.css
+++ b/src/main/webapp/layout/layout.css
@@ -400,7 +400,7 @@ div#leftSide {
 	position: relative;
 	float: left;
 	width: 540px;
-	background: white;
+	background: #f8f8f8;
 	height: 100%;	
 	padding: 20px 20px 20px 20px;
 }
@@ -534,8 +534,10 @@ fieldset, img {
 div#publish-tweet-box-bottom {
 	float: right;
 	color: #ccc;
-	font-size: 25px;
+	font-size: 20px;
 	padding-right: 2px;
+	height: 30px;
+	line-height: 30px;
 }
 
 #publish-tweet-box-top div.publish-tweet-counter-limit {
